--- a/Car_Master_App/AndroidManifest.xml
+++ b/Car_Master_App/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -33,6 +36,10 @@
         <activity
             android:name="com.example.carmaster.SingleRecallDetailActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.carmaster.CarValueActivity"
+            android:label="@string/title_activity_car_value" >
         </activity>
     </application>
 
