--- a/Second Increment/Car_Master_App_Wang/AndroidManifest.xml
+++ b/Second Increment/Car_Master_App_Wang/AndroidManifest.xml
@@ -7,9 +7,18 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
+	<permission
+        android:name="app.akexorcist.googlemapsv2direction.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"  />
+	
+	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +39,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
+            android:name="com.example.carmaster.MapActivityMain"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="com.example.carmaster.CarRecallActivity"
             android:label="@string/app_name" >
         </activity>
@@ -45,6 +58,13 @@
             android:name="com.example.carmaster.CarValueActivity"
             android:label="@string/title_activity_car_value" >
         </activity>
+        <meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="AIzaSyAOAS029ECQLohfuYAc2FYjEAoXkFfSm_8"/>
+        
+        <meta-data
+		    android:name="com.google.android.gms.version"
+		    android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
