--- a/Second Increment/Car_Master_App_Wang/bin/AndroidManifest.xml
+++ b/Second Increment/Car_Master_App_Wang/bin/AndroidManifest.xml
@@ -34,6 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name="com.example.carmaster.CarDetailActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.carmaster.car_detail"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name="com.example.carmaster.GetStationWithPrices"
             android:label="@string/app_name" >
