--- a/Second Increment/Car_Master_App_Wang/bin/AndroidManifest.xml
+++ b/Second Increment/Car_Master_App_Wang/bin/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.carmaster.MainActivity"
+            android:name="com.example.carmaster.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.carmaster.SignUPActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="com.example.carmaster.MainActivity"
+            android:label="@string/app_name" >
+            </activity>
          <activity
             android:name="com.example.carmaster.CarDetailActivity"
             android:label="@string/app_name" >
