--- a/Second Increment/Car_Master_App_Wang/project.properties
+++ b/Second Increment/Car_Master_App_Wang/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-18
 android.library.reference.1=../../../../../../../../adt-bundle-windows-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../../../../../../Android/extras/google/google_play_services/libproject/google-play-services_lib
